# msu-ediscovery-nlp-ml

./: README.md  pyproject.toml
notebooks/: ml_nlp_for_ediscovery.ipynb  ml_nlp_for_ediscovery.slides.html  nlp_ml_examples.py
