[tool.poetry]
name = "msu-ediscovery-nlp-ml"
version = "0.2"
description = ""
authors = ["Michael Bommarito <michael.bommarito@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.4"
scipy = "^1.9.3"
spacy = "^3.4.2"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
sklearn = "^0.0"
jupyter = "^1.0.0"
jupyter-black = "^0.3.1"
rise = "^5.7.1"
jupyter-contrib-nbextensions = "^0.5.1"
transformers = {extras = ["flax", "tf-gpu", "torch-gpu"], version = "^4.24.0"}
tensorflow = "^2.10.0"
jupyterlab = "^3.5.0"
nbconvert = {extras = ["webpdf"], version = "^7.2.3"}


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
